# repguard

./: .gitignore  main.py  pyproject.toml  repguard.db  session.json
repguard/: __init__.py  agents.py  analyzer.py  attack_detector.py  db.py  generator.py  mailer.py  models.py  prefilter.py  prospector.py  report.py  scraper.py  utils.py
scratch/: diagnose_scraper.py
templates/: dispute_template.txt
tests/: test_prefilter.py
