[project]
name = "repguard"
version = "0.1.0"
description = "Reputation Guard — Detect and dispute fake Google Maps reviews using AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "reportlab>=4.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
repguard = "main:main"
