[project]
name = "repguard"
version = "0.1.0"
description = "Reputation Guard — Detect and dispute fake Google Maps reviews using AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "reportlab>=4.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "nltk>=3.8",
    "scikit-learn>=1.0",
    "joblib>=1.2",
    "playwright-stealth>=2.0.3",
]

[project.scripts]
repguard = "main:main"
